--- a/README.adoc
+++ b/README.adoc
@@ -16,3 +16,10 @@ If you have a string of linked reroute nodes that are embedded in frames that ar
 
 You can optionally save the file to the file system.
 Also, you can provide a command (with a context "current working directory") to be run after collation.
+
+== Edit prev / next text on the linked frames
+
+When you are editing a text that's linked by frames and reroutes you run the `node.edit_next_text` and `node.edit_prev_text` texts to switch to the next linked text.
+It will, by default, stub missing texts.
+
+TIP: Link these to Ctrl ] and Ctrl [ on your key mappings.
